# grpc-windows

grpc_helloworld/: CMakeLists.txt  FindGRPC.cmake  greeter_server.cc  helloworld.proto  test_protoc.bat
grpc_helloworld/projects/: client.vcxproj  server.vcxproj
grpc_helloworld/src/client/: greeter_client.cc
